--- a/modulo1/package.json
+++ b/modulo1/package.json
@@ -13,5 +13,8 @@
     "@types/jest": "^27.4.1",
     "babel-jest": "^27.5.1",
     "jest": "^27.5.1"
+  },
+  "dependencies": {
+    "lodash": "^4.17.21"
   }
 }
